--- a/source/index.html
+++ b/source/index.html
@@ -8,30 +8,27 @@
 
 <body>
   <header class="page-header">
-    <h1 class="visually-hidden">Мобильное проложение "Пинк"</h1>
-    <div class="page-header wrapper">
+    <h1 class="page-header__visually-hidden">Мобильное проложение "Пинк"</h1>
+    <div class="page-header__wrapper">
       <a class="page-header__logo" href="#">
-        <img class="page-header__logo-image" src="http://placehold.it/80x25" />
+        <img class="page-header__logo-image" src="http://placehold.it/80x25" alt="Pink"/>
       </a>
       <button class="page-header__button-close--active">
-        <img class="button-close" src="http://placehold.it/30x25" />
-      </button>
-      <button class="page-header__button-open--hidden">
-        <img class="button-open" src="http://placehold.it/50x25" />
+        <img class="button-close" src="http://placehold.it/30x25" alt="Close" />
       </button>
     </div>
     <nav class="page-header__nav">
-      <ul class="nav__list site-list">
-        <li class="site-list__item">
+      <ul class="page-header__nav-list">
+        <li class="page-header__nav-item">
           <a>Главная</a>
         </li>
-        <li class="site-list__item">
+        <li class="page-header__nav-item">
           <a href="photo.html">Фотографии</a>
         </li>
-        <li class="site-list__item">
+        <li class="page-header__nav-item">
           <a href="form.html">Конкурс</a>
         </li>
-        <li class="site-list__item">
+        <li class="page-header__nav-item">
           <a href="#">HTML Academy</a>
         </li>
       </ul>
@@ -39,7 +36,7 @@
   </header>
   <main class="page-main">
     <header class="page-main__header">
-      <img src="http://placehold.it/320x395" alt="iPhone" />
+      <h2 class="header__visually-hidden">iPhone</h2>
     </header>
     <section class="page-main__application-market">
       <h2 class="visually-hidden">Установка приложения</h2>
@@ -63,32 +60,29 @@
           </a>
         </li>
       </ul>
-      <p class="application-market__text">
-        Доступно для iPhone, iPad, Android, Windows Phone, OS X, Window
-      </p>
+      <p class="application-market__text">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Window</p>
     </section>
     <section class="page-main__advantages">
-      <h2 class="visually-hidden">Наши преимущества</h2>
-      <p class="advantages__post">
-        Устали от серости мегаполиса? Нам есть, что вам предложить!
-      </p>
+      <h2 class="page-main__visually-hidden">Наши преимущества</h2>
+      <p class="advantages__post">Устали от серости мегаполиса?</p>
+      <p class="advantages__post">Нам есть, что вам предложить!</p>
       <ul class="advantages__list">
         <li class="list__item-adv">
-          <h1 class="list-title">Поднимает настроение</h1>
+          <h3 class="list-title">Поднимает настроение</h3>
           <p class="list-paragrapf">
             Приложение позволит вам победить осеннюю хандру и депрессию
             буквально в несколько кликов.
           </p>
         </li>
         <li class="list__item-adv">
-          <h1 class="list-title">Меняет мир вокруг</h1>
+          <h3 class="list-title">Меняет мир вокруг</h3>
           <p class="list-paragrapf">
             Сделайте снимок и украсьте его смайликом или текстовой подписью,
             чтобы усилить эффект.
           </p>
         </li>
         <li class="list__item-adv">
-          <h1 class="list-title">Заводит новых друзей</h1>
+          <h3 class="list-title">Заводит новых друзей</h3>
           <p class="list-paragrapf">
             Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и
             заводите новых.
