--- a/source/form.html
+++ b/source/form.html
@@ -8,46 +8,44 @@
 
 <body>
   <header class="page-header">
-    <div class="page-header wrapper">
+    <h1 class="page-header__visually-hidden">Мобильное проложение "Пинк"</h1>
+    <div class="page-header__wrapper">
       <a class="page-header__logo" href="#">
-        <img class="page-header__logo-image" src="http://placehold.it/80x25" />
+        <img class="page-header__logo-image" src="http://placehold.it/80x25" alt="Pink"/>
       </a>
       <button class="page-header__button-close--active">
-        <img class="button-close" src="http://placehold.it/30x25" />
+        <img class="button-close" src="http://placehold.it/30x25" alt="Close" />
       </button>
-      <button class="page-header__button-open">
-        <img class="button-open" src="http://placehold.it/50x25>
-        </button>
-      </div>
-      <nav class=" page-header__nav">
-        <ul class="nav__list site-list">
-          <li class="site-list__item">
-            <a>Главная</a>
-          </li>
-          <li class="site-list__item">
-            <a href="photo.html">Фотографии</a>
-          </li>
-          <li class="site-list__item">
-            <a href="form.html">Конкурс</a>
-          </li>
-          <li class="site-list__item">
-            <a href="#">HTML Academy</a>
-          </li>
-        </ul>
-        </nav>
+    </div>
+    <nav class="page-header__nav">
+      <ul class="page-header__nav-list">
+        <li class="page-header__nav-item">
+          <a href="index.html">Главная</a>
+        </li>
+        <li class="page-header__nav-item">
+          <a href="photo.html">Фотографии</a>
+        </li>
+        <li class="page-header__nav-item">
+          <a>Конкурс</a>
+        </li>
+        <li class="page-header__nav-item">
+          <a href="#">HTML Academy</a>
+        </li>
+      </ul>
+    </nav>
   </header>
   <main class="page-main">
-    <div class="page-main__header">
-      <h1 class="header__title-photo">
+    <header class="page-main__header">
+      <h2 class="header__title-photo">
         Конкурс на самое безбашенное путешествие с Пинк
-      </h1>
-    </div>
+      </h2>
+    </header>
   </main>
   <footer class="page-footer">
     <a class="page-footer__logo" href="#">
-      <img class="page-footer__logo-image" src="http://placehold.it/145x40" />
+      <img class="page-footer__logo-image" src="http://placehold.it/145x40" alt="Pink"/>
     </a>
-    <div class="page-footer__social social">
+    <div class="page-footer__social">
       <ul class="social__list">
         <li class="social__item">
           <a class="social__link social__link--twitter" href="https://www.twitter.com/htmlacademy"></a>
@@ -60,9 +58,9 @@
         </li>
       </ul>
     </div>
-    <div class="page-footer__copyright copyright">
+    <div class="page-footer__copyright">
       <b class="copyright__text">Разработано:</b>
-      <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive"></a>
+      <a class="copyright__button" href="https://htmlacademy.ru/intensive/adaptive"></a>
     </div>
   </footer>
 </body>
