--- a/source/index.html
+++ b/source/index.html
@@ -8,13 +8,13 @@
 
 <body>
   <header class="page-header">
-    <h1 class="page-header__visually-hidden">Мобильное проложение "Пинк"</h1>
+    <h1 class="visually-hidden">Мобильное проложение "Пинк"</h1>
     <div class="page-header__wrapper">
       <a class="page-header__logo" href="#">
         <img class="page-header__logo-image" src="http://placehold.it/80x25" alt="Pink"/>
       </a>
-      <button class="page-header__button-close--active">
-        <img class="button-close" src="http://placehold.it/30x25" alt="Close" />
+      <button class="button-close--active page-header__button-close">
+        <img class="button-close__image" src="http://placehold.it/30x25" alt="Close" />
       </button>
     </div>
     <nav class="page-header__nav">
@@ -36,25 +36,23 @@
   </header>
   <main class="page-main">
     <header class="page-main__header">
-      <h2 class="header__visually-hidden">iPhone</h2>
+      <h2 class="visually-hidden">iPhone</h2>
     </header>
-    <section class="page-main__application-market">
+    <section class="application-market page-main__application-market ">
       <h2 class="visually-hidden">Установка приложения</h2>
-      <button class="application-market__button">
-        <a class="button-title" href="#">Скачать приложение</a>
-      </button>
-      <ul class="application-market__list-market">
-        <li class="list-market__item">
+      <a class="application-market__button" href="#">Скачать приложение</a>
+      <ul class="application-market__list">
+        <li class="application-market__item">
           <a href="#">
             <img src="http://placehold.it/70x50" alt="iTunes" />
           </a>
         </li>
-        <li class="list-market__item">
+        <li class="application-market__item">
           <a href="#">
             <img src="http://placehold.it/70x50" alt="Play Market" />
           </a>
         </li>
-        <li class="list-market__item">
+        <li class="application-market__item">
           <a href="#">
             <img src="http://placehold.it/70x50" alt="Microsoft Store" />
           </a>
@@ -62,28 +60,28 @@
       </ul>
       <p class="application-market__text">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Window</p>
     </section>
-    <section class="page-main__advantages">
-      <h2 class="page-main__visually-hidden">Наши преимущества</h2>
+    <section class="advantages page-main__advantages">
+      <h2 class="visually-hidden">Наши преимущества</h2>
       <p class="advantages__post">Устали от серости мегаполиса?</p>
       <p class="advantages__post">Нам есть, что вам предложить!</p>
       <ul class="advantages__list">
-        <li class="list__item-adv">
-          <h3 class="list-title">Поднимает настроение</h3>
-          <p class="list-paragrapf">
+        <li class="advantages__item">
+          <h3 class="advantages__title">Поднимает настроение</h3>
+          <p class="advantages__paragrapf">
             Приложение позволит вам победить осеннюю хандру и депрессию
             буквально в несколько кликов.
           </p>
         </li>
-        <li class="list__item-adv">
-          <h3 class="list-title">Меняет мир вокруг</h3>
-          <p class="list-paragrapf">
+        <li class="advantages__item">
+          <h3 class="advantages__title">Меняет мир вокруг</h3>
+          <p class="advantages__paragrapf">
             Сделайте снимок и украсьте его смайликом или текстовой подписью,
             чтобы усилить эффект.
           </p>
         </li>
-        <li class="list__item-adv">
-          <h3 class="list-title">Заводит новых друзей</h3>
-          <p class="list-paragrapf">
+        <li class="advantages__item">
+          <h3 class="advantages__title">Заводит новых друзей</h3>
+          <p class="advantages__paragrapf">
             Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и
             заводите новых.
           </p>
