Исправили form по БЭМ

--- a/source/form.html
+++ b/source/form.html
@@ -8,12 +8,12 @@
 
 <body>
   <header class="page-header">
-    <h1 class="page-header__visually-hidden">Мобильное проложение "Пинк"</h1>
+    <h1 class="visually-hidden">Мобильное проложение "Пинк"</h1>
     <div class="page-header__wrapper">
       <a class="page-header__logo" href="#">
         <img class="page-header__logo-image" src="http://placehold.it/80x25" alt="Pink"/>
       </a>
-      <button class="page-header__button-close--active">
+      <button class="button-close--active page-header__button-close">
         <img class="button-close" src="http://placehold.it/30x25" alt="Close" />
       </button>
     </div>
@@ -46,21 +46,21 @@
       <img class="page-footer__logo-image" src="http://placehold.it/145x40" alt="Pink"/>
     </a>
     <div class="page-footer__social">
-      <ul class="social__list">
-        <li class="social__item">
-          <a class="social__link social__link--twitter" href="https://www.twitter.com/htmlacademy"></a>
+      <ul class="page-footer__list">
+        <li class="page-footer__item">
+          <a class="page-footer__link--twitter" href="https://www.twitter.com/htmlacademy"></a>
         </li>
-        <li class="social__item">
-          <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy"></a>
+        <li class="page-footer__item">
+          <a class="page-footer__link--facebook" href="https://www.facebook.com/htmlacademy"></a>
         </li>
-        <li class="social__item">
-          <a class="social__link social__link--youtube" href="https://www.youtube.com/htmlacademy"></a>
+        <li class="page-footer__item">
+          <a class="page-footer__link--youtube" href="https://www.youtube.com/htmlacademy"></a>
         </li>
       </ul>
     </div>
     <div class="page-footer__copyright">
-      <b class="copyright__text">Разработано:</b>
-      <a class="copyright__button" href="https://htmlacademy.ru/intensive/adaptive"></a>
+      <b class="page-footer__text">Разработано:</b>
+      <a class="page-footer__button" href="https://htmlacademy.ru/intensive/adaptive"></a>
     </div>
   </footer>
 </body>
