Исправил строки с модификаторами

--- a/source/form.html
+++ b/source/form.html
@@ -11,10 +11,10 @@
     <h1 class="visually-hidden">Мобильное проложение "Пинк"</h1>
     <div class="page-header__wrapper">
       <a class="page-header__logo" href="#">
-        <img class="page-header__logo-image" src="http://placehold.it/80x25" alt="Pink"/>
+        <img class="page-header__logo-image" src="http://placehold.it/80x25" alt="Pink" />
       </a>
-      <button class="button-close--active page-header__button-close">
-        <img class="button-close" src="http://placehold.it/30x25" alt="Close" />
+      <button class="button-close button-close--active page-header__button-close">
+        <img class="button-close__image" src="http://placehold.it/30x25" alt="Close" />
       </button>
     </div>
     <nav class="page-header__nav">
@@ -43,18 +43,18 @@
   </main>
   <footer class="page-footer">
     <a class="page-footer__logo" href="#">
-      <img class="page-footer__logo-image" src="http://placehold.it/145x40" alt="Pink"/>
+      <img class="page-footer__logo-image" src="http://placehold.it/145x40" alt="Pink" />
     </a>
     <div class="page-footer__social">
       <ul class="page-footer__list">
         <li class="page-footer__item">
-          <a class="page-footer__link--twitter" href="https://www.twitter.com/htmlacademy"></a>
+          <a class="page-footer__link page-footer__link--twitter" href="https://www.twitter.com/htmlacademy"></a>
         </li>
         <li class="page-footer__item">
-          <a class="page-footer__link--facebook" href="https://www.facebook.com/htmlacademy"></a>
+          <a class="page-footer__link page-footer__link--facebook" href="https://www.facebook.com/htmlacademy"></a>
         </li>
         <li class="page-footer__item">
-          <a class="page-footer__link--youtube" href="https://www.youtube.com/htmlacademy"></a>
+          <a class="page-footer__link page-footer__link--youtube" href="https://www.youtube.com/htmlacademy"></a>
         </li>
       </ul>
     </div>
