--- a/source/index.html
+++ b/source/index.html
@@ -11,9 +11,9 @@
     <h1 class="visually-hidden">Мобильное проложение "Пинк"</h1>
     <div class="page-header__wrapper">
       <a class="page-header__logo" href="#">
-        <img class="page-header__logo-image" src="http://placehold.it/80x25" alt="Pink"/>
+        <img class="page-header__logo-image" src="http://placehold.it/80x25" alt="Pink" />
       </a>
-      <button class="button-close--active page-header__button-close">
+      <button class="button-close button-close--active page-header__button-close">
         <img class="button-close__image" src="http://placehold.it/30x25" alt="Close" />
       </button>
     </div>
