--- a/source/photo.html
+++ b/source/photo.html
@@ -11,10 +11,10 @@
     <h1 class="visually-hidden">Мобильное проложение "Пинк"</h1>
     <div class="page-header__wrapper">
       <a class="page-header__logo" href="#">
-        <img class="page-header__logo-image" src="http://placehold.it/80x25" alt="Pink"/>
+        <img class="page-header__logo-image" src="http://placehold.it/80x25" alt="Pink" />
       </a>
-      <button class="button-close--active page-header__button-close">
-        <img class="button-close" src="http://placehold.it/30x25" alt="Close" />
+      <button class="button-close button-close--active page-header__button-close">
+        <img class="button-close__image" src="http://placehold.it/30x25" alt="Close" />
       </button>
     </div>
     <nav class="page-header__nav">
@@ -45,8 +45,8 @@
       </p>
     </div>
     <ul class="photo-list page-main__photo-list">
-      <li class="photo-list__item--active">
-        <img class="photo-list__image" src="http://placehold.it/320x140" alt="Панорама"/>
+      <li class="photo-list__item photo-list__item--panorama">
+        <img class="photo-list__image" src="http://placehold.it/320x140" alt="Панорама" />
         <span class="photo-list__name">Анна
           <b class="photo-list__time">(5 минут назад)</b>
         </span>
@@ -55,13 +55,13 @@
           трансляцию в перископе, задавайте свои вопросы.
         </p>
         <span class="photo-list__like">
-          <img class="photo-list__image-like" src="http://placehold.it/15x15" alt="Love"/>
-          <b class="photo-list__text">Нравится</b>
+          <img class="photo-list__image-like" src="http://placehold.it/15x15" alt="Love" />
+          <b class="photo-list__item-text">Нравится</b>
           <b class="photo-list__quantity">215</b>
         </span>
       </li>
       <li class="photo-list__item">
-        <img class="photo-list__image" src="http://placehold.it/280x180" alt="Машина"/>
+        <img class="photo-list__image" src="http://placehold.it/280x180" alt="Машина" />
         <span class="photo-list__name">Левон
           <b class="photo-list__time">(5 часов назад)</b>
         </span>
@@ -69,25 +69,25 @@
           Вчера он на луну летал, сегодня в руки к нам попал.
         </p>
         <span class="photo-list__like">
-          <img class="photo-list__image-like" src="http://placehold.it/15x15" alt="Love"/>
-          <b class="photo-list__text">Нравится</b>
+          <img class="photo-list__image-like" src="http://placehold.it/15x15" alt="Love" />
+          <b class="photo-list__item-text">Нравится</b>
           <b class="photo-list__quantity">215</b>
         </span>
       </li>
       <li class="photo-list__item">
-        <img class="photo-list__image" src="http://placehold.it/280x180" alt="Барабаны"/>
+        <img class="photo-list__image" src="http://placehold.it/280x180" alt="Барабаны" />
         <span class="photo-list__name">Антон
           <b class="photo-list__time">(12 часов назад)</b>
         </span>
         <p class="photo-list__paragraph">Соседи будут рады.</p>
         <span class="photo-list__like">
-          <img class="photo-list__image-like" src="http://placehold.it/15x15" alt="Love"/>
-          <b class="photo-list__text">Нравится</b>
+          <img class="photo-list__image-like" src="http://placehold.it/15x15" alt="Love" />
+          <b class="photo-list__item-text">Нравится</b>
           <b class="photo-list__quantity">215</b>
         </span>
       </li>
       <li class="photo-list__item">
-        <img class="photo-list__image" src="http://placehold.it/280x180" alt="Стена"/>
+        <img class="photo-list__image" src="http://placehold.it/280x180" alt="Стена" />
         <span class="photo-list__name">Борис
           <b class="photo-list__time">(20 часов назад)</b>
         </span>
@@ -95,44 +95,44 @@
           Здесь могла быть ваша цитата о высоком и вечном.
         </p>
         <span class="photo-list__like">
-          <img class="photo-list__image-like" src="http://placehold.it/15x15" alt="Love"/>
-          <b class="photo-list__text">Нравится</b>
+          <img class="photo-list__image-like" src="http://placehold.it/15x15" alt="Love" />
+          <b class="photo-list__item-text">Нравится</b>
           <b class="photo-list__quantity">215</b>
         </span>
       </li>
       <li class="photo-list__item">
-        <img class="photo-list__image" src="http://placehold.it/280x180" alt="Ярмарка"/>
+        <img class="photo-list__image" src="http://placehold.it/280x180" alt="Ярмарка" />
         <span class="photo-list__name">Сергей
           <b class="photo-list__time">(25 часов назад)</b>
         </span>
         <p class="photo-list__paragraph">Самая кубанская в мире!</p>
         <span class="photo-list__like">
-          <img class="photo-list__image-like" src="http://placehold.it/15x15" alt="Love"/>
-          <b class="photo-list__text">Нравится</b>
+          <img class="photo-list__image-like" src="http://placehold.it/15x15" alt="Love" />
+          <b class="photo-list__item-text">Нравится</b>
           <b class="photo-list__quantity">215</b>
         </span>
       </li>
       <li class="photo-list__item">
-        <img class="photo-list__image" src="http://placehold.it/280x180" alt="Горы"/>
+        <img class="photo-list__image" src="http://placehold.it/280x180" alt="Горы" />
         <span class="photo-list__name">Максим
           <b class="photo-list__time">(40 часов назад)</b>
         </span>
         <p class="photo-list__paragraph">Где снег-то?</p>
         <span class="photo-list__like">
-          <img class="photo-list__image-like" src="http://placehold.it/15x15" alt="Love"/>
-          <b class="photo-list__text">Нравится</b>
+          <img class="photo-list__image-like" src="http://placehold.it/15x15" alt="Love" />
+          <b class="photo-list__item-text">Нравится</b>
           <b class="photo-list__quantity">215</b>
         </span>
       </li>
       <li class="photo-list__item">
-        <img class="photo-list__image" src="http://placehold.it/280x180" alt="Крыло"/>
+        <img class="photo-list__image" src="http://placehold.it/280x180" alt="Крыло" />
         <span class="photo-list__name">Надежда
           <b class="photo-list__time">(45 часов назад)</b>
         </span>
         <p class="photo-list__paragraph">Всем GM и взаимные лайки!</p>
         <span class="photo-list__like">
-          <img class="photo-list__image-like" src="http://placehold.it/15x15" alt="Love"/>
-          <b class="photo-list__text">Нравится</b>
+          <img class="photo-list__image-like" src="http://placehold.it/15x15" alt="Love" />
+          <b class="photo-list__item-text">Нравится</b>
           <b class="photo-list__quantity">215</b>
         </span>
       </li>
@@ -140,18 +140,18 @@
   </main>
   <footer class="page-footer">
     <a class="page-footer__logo" href="#">
-      <img class="page-footer__logo-image" src="http://placehold.it/145x40" alt="Pink"/>
+      <img class="page-footer__logo-image" src="http://placehold.it/145x40" alt="Pink" />
     </a>
     <div class="page-footer__social">
       <ul class="page-footer__list">
         <li class="page-footer__item">
-          <a class="page-footer__link--twitter" href="https://www.twitter.com/htmlacademy"></a>
+          <a class="page-footer__link page-footer__link--twitter" href="https://www.twitter.com/htmlacademy"></a>
         </li>
         <li class="page-footer__item">
-          <a class="page-footer__link--facebook" href="https://www.facebook.com/htmlacademy"></a>
+          <a class="page-footer__link page-footer__link--facebook" href="https://www.facebook.com/htmlacademy"></a>
         </li>
         <li class="page-footer__item">
-          <a class="page-footer__link--youtube" href="https://www.youtube.com/htmlacademy"></a>
+          <a class="page-footer__link page-footer__link--youtube" href="https://www.youtube.com/htmlacademy"></a>
         </li>
       </ul>
     </div>
