--- a/source/photo.html
+++ b/source/photo.html
@@ -46,94 +46,94 @@
     </div>
     <ul class="photo-list page-main__photo-list">
       <li class="photo-list__item photo-list__item--panorama">
-        <img class="photo-list__image" src="http://placehold.it/320x140" alt="Панорама" />
-        <span class="photo-list__name">Анна
+        <img class="photo-list__item-image" src="http://placehold.it/320x140" alt="Панорама" />
+        <span class="photo-list__item-name">Анна
           <b class="photo-list__time">(5 минут назад)</b>
         </span>
-        <p class="photo-list__paragraph">
+        <p class="photo-list__item-paragraph">
           Прыгать или нет? Напишите в комментарии свой совет и смотрите прямую
           трансляцию в перископе, задавайте свои вопросы.
         </p>
-        <span class="photo-list__like">
+        <span class="photo-list__item-like">
           <img class="photo-list__image-like" src="http://placehold.it/15x15" alt="Love" />
           <b class="photo-list__item-text">Нравится</b>
-          <b class="photo-list__quantity">215</b>
+          <b class="photo-list__item-quantity">215</b>
         </span>
       </li>
       <li class="photo-list__item">
-        <img class="photo-list__image" src="http://placehold.it/280x180" alt="Машина" />
-        <span class="photo-list__name">Левон
-          <b class="photo-list__time">(5 часов назад)</b>
+        <img class="photo-list__item-image" src="http://placehold.it/280x180" alt="Машина" />
+        <span class="photo-list__item-name">Левон
+          <b class="photo-list__item-time">(5 часов назад)</b>
         </span>
-        <p class="photo-list__paragraph">
+        <p class="photo-list__item-paragraph">
           Вчера он на луну летал, сегодня в руки к нам попал.
         </p>
-        <span class="photo-list__like">
+        <span class="photo-list__item-like">
           <img class="photo-list__image-like" src="http://placehold.it/15x15" alt="Love" />
           <b class="photo-list__item-text">Нравится</b>
-          <b class="photo-list__quantity">215</b>
+          <b class="photo-list__item-quantity">215</b>
         </span>
       </li>
       <li class="photo-list__item">
-        <img class="photo-list__image" src="http://placehold.it/280x180" alt="Барабаны" />
-        <span class="photo-list__name">Антон
-          <b class="photo-list__time">(12 часов назад)</b>
+        <img class="photo-list__item-image" src="http://placehold.it/280x180" alt="Барабаны" />
+        <span class="photo-list__item-name">Антон
+          <b class="photo-list__item-time">(12 часов назад)</b>
         </span>
-        <p class="photo-list__paragraph">Соседи будут рады.</p>
-        <span class="photo-list__like">
+        <p class="photo-list__item-paragraph">Соседи будут рады.</p>
+        <span class="photo-list__item-like">
           <img class="photo-list__image-like" src="http://placehold.it/15x15" alt="Love" />
           <b class="photo-list__item-text">Нравится</b>
-          <b class="photo-list__quantity">215</b>
+          <b class="photo-list__item-quantity">215</b>
         </span>
       </li>
       <li class="photo-list__item">
-        <img class="photo-list__image" src="http://placehold.it/280x180" alt="Стена" />
-        <span class="photo-list__name">Борис
-          <b class="photo-list__time">(20 часов назад)</b>
+        <img class="photo-list__item-image" src="http://placehold.it/280x180" alt="Стена" />
+        <span class="photo-list__item-name">Борис
+          <b class="photo-list__item-time">(20 часов назад)</b>
         </span>
-        <p class="photo-list__paragraph">
+        <p class="photo-list__item-paragraph">
           Здесь могла быть ваша цитата о высоком и вечном.
         </p>
-        <span class="photo-list__like">
+        <span class="photo-list__item-like">
           <img class="photo-list__image-like" src="http://placehold.it/15x15" alt="Love" />
           <b class="photo-list__item-text">Нравится</b>
-          <b class="photo-list__quantity">215</b>
+          <b class="photo-list__item-quantity">215</b>
         </span>
       </li>
       <li class="photo-list__item">
-        <img class="photo-list__image" src="http://placehold.it/280x180" alt="Ярмарка" />
-        <span class="photo-list__name">Сергей
-          <b class="photo-list__time">(25 часов назад)</b>
+        <img class="photo-list__item-image" src="http://placehold.it/280x180" alt="Ярмарка" />
+        <span class="photo-list__item-name">Сергей
+          <b class="photo-list__item-time">(25 часов назад)</b>
         </span>
-        <p class="photo-list__paragraph">Самая кубанская в мире!</p>
-        <span class="photo-list__like">
+        <p class="photo-list__item-paragraph">Самая кубанская в мире!</p>
+        <span class="photo-list__item-like">
           <img class="photo-list__image-like" src="http://placehold.it/15x15" alt="Love" />
           <b class="photo-list__item-text">Нравится</b>
-          <b class="photo-list__quantity">215</b>
+          <b class="photo-list__item-quantity">215</b>
         </span>
       </li>
       <li class="photo-list__item">
-        <img class="photo-list__image" src="http://placehold.it/280x180" alt="Горы" />
-        <span class="photo-list__name">Максим
-          <b class="photo-list__time">(40 часов назад)</b>
+        <img class="photo-list__item-image" src="http://placehold.it/280x180" alt="Горы" />
+        <span class="photo-list__item-name">Максим
+          <b class="photo-list__item-time">(40 часов назад)</b>
         </span>
-        <p class="photo-list__paragraph">Где снег-то?</p>
-        <span class="photo-list__like">
+        <p class="photo-list__item-paragraph">Где снег-то?</p>
+        <span class="photo-list__item-like">
           <img class="photo-list__image-like" src="http://placehold.it/15x15" alt="Love" />
           <b class="photo-list__item-text">Нравится</b>
-          <b class="photo-list__quantity">215</b>
+          <b class="photo-list__item-quantity">215</b>
         </span>
       </li>
       <li class="photo-list__item">
-        <img class="photo-list__image" src="http://placehold.it/280x180" alt="Крыло" />
-        <span class="photo-list__name">Надежда
-          <b class="photo-list__time">(45 часов назад)</b>
+        <img class="photo-list__item-image" src="http://placehold.it/280x180" alt="Крыло" />
+        <span class="photo-list__item-name">Надежда
+          <b class="photo-list__item-time">(45 часов назад)</b>
         </span>
-        <p class="photo-list__paragraph">Всем GM и взаимные лайки!</p>
-        <span class="photo-list__like">
+        <p class="photo-list__item-paragraph">Всем GM и взаимные лайки!</p>
+        <span class="photo-list__item-like">
           <img class="photo-list__image-like" src="http://placehold.it/15x15" alt="Love" />
           <b class="photo-list__item-text">Нравится</b>
-          <b class="photo-list__quantity">215</b>
+          <b class="photo-list__item-quantity">215</b>
         </span>
       </li>
     </ul>
