--- a/source/form.html
+++ b/source/form.html
@@ -8,7 +8,7 @@
 </head>
 
 <body class="page-body">
-  <header class="page-header page-body__page-header">
+  <header class="page-header">
     <div class="page-header__wrapper">
       <a class="page-header__logo" href="#">
         <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="74.426px" height="22.859px" viewBox="0 0 74.426 22.859" enable-background="new 0 0 74.426 22.859" xml:space="preserve">
@@ -47,7 +47,7 @@
       </ul>
     </nav>
   </header>
-  <main class="page-main page-body__page-main">
+  <main class="page-main">
     <h1 class="visually-hidden">Мобильное проложение "Пинк" конкурс</h1>
     <header class="page-main__header">
       <h2 class="page-main__title-photo">
@@ -55,7 +55,7 @@
       </h2>
     </header>
   </main>
-  <footer class="page-footer page-body__page-footer">
+  <footer class="page-footer">
     <div class="page-footer__logo">
       <a href="#">
         <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="146.3px" height="40.375px" viewBox="0 0 146.3 40.375" enable-background="new 0 0 146.3 40.375" xml:space="preserve">
