--- a/source/form.html
+++ b/source/form.html
@@ -6,15 +6,14 @@
   <title>HTML Academy: Пинк</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="format-detection" content="telephone=no">
-  <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body class="page-body">
   <header class="page-header">
     <div class="page-header__wrapper">
-      <div class="page-header__header-wrapper">
-        <a class="page-header__logo" href="#">
+      <div class="button-list page-header__button-list">
+        <a class="button-list__logo" href="#">
           <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="74.426px" height="22.859px" viewBox="0 0 74.426 22.859" enable-background="new 0 0 74.426 22.859" xml:space="preserve">
             <g>
               <path fill="#FFFFFF"
@@ -27,7 +26,7 @@
             </g>
           </svg>
         </a>
-        <button class="button-close button-close--active page-header__button-close">
+        <button class="button-close button-close--active button-list__button-close">
           <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="23.867px" height="23.867px" viewBox="0 0 23.867 23.867" enable-background="new 0 0 23.867 23.867" xml:space="preserve">
             <path fill="#FFFFFF"
               d="M15.087,11.933l8.56-8.559c0.293-0.293,0.293-0.768,0-1.061L21.554,0.22C21.414,0.079,21.223,0,21.023,0 c-0.199,0-0.391,0.079-0.529,0.22l-8.561,8.56l-8.56-8.56c-0.282-0.282-0.78-0.282-1.061,0L0.22,2.313 c-0.293,0.293-0.293,0.768,0,1.061l8.56,8.559l-8.56,8.559c-0.293,0.293-0.293,0.768,0,1.062l2.093,2.094 c0.141,0.142,0.331,0.22,0.53,0.22c0.199,0,0.39-0.078,0.53-0.22l8.561-8.56l8.56,8.56c0.141,0.142,0.332,0.22,0.53,0.22 c0.199,0,0.39-0.078,0.53-0.22l2.093-2.094c0.293-0.294,0.293-0.769,0-1.062L15.087,11.933z" />
@@ -51,12 +50,12 @@
         </ul>
       </nav>
     </div>
-    <p class="page-header__title">
-      Конкурс на самое безбашенное путешествие с Пинк
-    </p>
   </header>
   <main class="page-main">
     <h1 class="visually-hidden">Мобильное проложение "Пинк" конкурс</h1>
+    <p class="page-main__title">
+      Конкурс на самое безбашенное путешествие с Пинк
+    </p>
   </main>
   <footer class="page-footer">
     <div class="page-footer__logo">
