--- a/source/photo.html
+++ b/source/photo.html
@@ -6,15 +6,14 @@
   <title>HTML Academy: Пинк</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="format-detection" content="telephone=no">
-  <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body class="page-body">
   <header class="page-header">
     <div class="page-header__wrapper">
-      <div class="page-header__header-wrapper">
-        <a class="page-header__logo" href="#">
+      <div class="button-list page-header__button-list">
+        <a class="button-list__logo" href="#">
           <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="74.426px" height="22.859px" viewBox="0 0 74.426 22.859" enable-background="new 0 0 74.426 22.859" xml:space="preserve">
             <g>
               <path fill="#FFFFFF"
@@ -27,7 +26,7 @@
             </g>
           </svg>
         </a>
-        <button class="button-close button-close--active page-header__button-close">
+        <button class="button-close button-close--active button-list__button-close">
           <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="23.867px" height="23.867px" viewBox="0 0 23.867 23.867" enable-background="new 0 0 23.867 23.867" xml:space="preserve">
             <path fill="#FFFFFF"
               d="M15.087,11.933l8.56-8.559c0.293-0.293,0.293-0.768,0-1.061L21.554,0.22C21.414,0.079,21.223,0,21.023,0 c-0.199,0-0.391,0.079-0.529,0.22l-8.561,8.56l-8.56-8.56c-0.282-0.282-0.78-0.282-1.061,0L0.22,2.313 c-0.293,0.293-0.293,0.768,0,1.061l8.56,8.559l-8.56,8.559c-0.293,0.293-0.293,0.768,0,1.062l2.093,2.094 c0.141,0.142,0.331,0.22,0.53,0.22c0.199,0,0.39-0.078,0.53-0.22l8.561-8.56l8.56,8.56c0.141,0.142,0.332,0.22,0.53,0.22 c0.199,0,0.39-0.078,0.53-0.22l2.093-2.094c0.293-0.294,0.293-0.769,0-1.062L15.087,11.933z" />
@@ -51,42 +50,40 @@
         </ul>
       </nav>
     </div>
-    <p class="page-header__title">
-      Фотографии пользователей
-    </p>
   </header>
   <main class="page-main">
+    <p class="page-main__title">
+      Фотографии пользователей
+    </p>
     <h1 class="visually-hidden">Мобильное проложение "Пинк" фотографии</h1>
-    <div class="page-main__post">
       <p class="page-main__post-paragraph">
         Взгляните на фотографии, которые
         выкладывают пользователи!
         Видите как не хватает ваших?
       </p>
-    </div>
-    <div class="page-main__item-panorama">
-      <div class="page-main__item-wrapper">
-        <span class="page-main__item-name">Анна
-          <b class="page-main__item-time">(5 минут назад)</b>
-        </span>
-        <p class="page-main__item-paragraph">
-          Прыгать или нет? Напишите в комментарии свой совет и смотрите прямую
-          трансляцию в перископе, задавайте свои вопросы.
-        </p>
-        <span class="page-main__item-like">
-          <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="12.545px" height="11.99px" viewBox="521.939 473.064 12.545 11.99" enable-background="new 521.939 473.064 12.545 11.99" xml:space="preserve">
-            <g>
-              <path fill="#D22856"
-                d="M528.174,485.055c-0.212,0-0.412-0.091-0.552-0.249c-3.798-4.324-4.644-5.298-4.858-5.572l-0.004,0.0 c-0.529-0.675-0.821-1.518-0.821-2.373c0-2.095,1.704-3.799,3.799-3.799c0.934,0,1.804,0.32,2.484,0.898 c0.696-0.578,1.56-0.898,2.463-0.898c2.095,0,3.799,1.704,3.799,3.799c0,0.909-0.318,1.754-0.896,2.381l-4.86,5.561 C528.587,484.964,528.386,485.055,528.174,485.055L528.174,485.055z M523.929,478.349c0.208,0.255,2.471,2.839,4.243,4.858 l4.323-4.944c0.34-0.369,0.52-0.86,0.52-1.399c0-1.285-1.045-2.331-2.33-2.331c-0.729,0-1.421,0.344-1.9,0.943 c-0.142,0.178-0.353,0.267-0.585,0.275c-0.227-0.003-0.439-0.111-0.575-0.294c-0.441-0.587-1.129-0.925-1.887-0.925 c-1.285,0-2.33,1.046-2.33,2.331c0,0.678,0.275,1.171,0.507,1.467C523.919,478.336,523.925,478.342,523.929,478.349z" />
-            </g>
-          </svg>
-          <b class="page-main__item-text">Нравится</b>
-          <b class="page-main__item-quantity">215</b>
-        </span>
-      </div>
-    </div>
     <ul class="photo-list page-main__photo-list">
+      <li class="photo-list__item photo-list__item--panorama page-main__photo-list">
+        <img src="img/panorama-mobile@1x.jpg" width="320"  height="137" alt="Панорама">
+      <span class="photo-list__item-name">Анна
+        <b class="photo-list__item-time">(5 минут назад)</b>
+      </span>
+      <p class="photo-list__item-paragraph">
+        Прыгать или нет? Напишите в комментарии свой совет и смотрите прямую
+        трансляцию в перископе, задавайте свои вопросы.
+      </p>
+      <span class="photo-list__item-like">
+        <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="12.545px" height="11.99px" viewBox="521.939 473.064 12.545 11.99" enable-background="new 521.939 473.064 12.545 11.99" xml:space="preserve">
+          <g>
+            <path fill="#D22856"
+              d="M528.174,485.055c-0.212,0-0.412-0.091-0.552-0.249c-3.798-4.324-4.644-5.298-4.858-5.572l-0.004,0.0 c-0.529-0.675-0.821-1.518-0.821-2.373c0-2.095,1.704-3.799,3.799-3.799c0.934,0,1.804,0.32,2.484,0.898 c0.696-0.578,1.56-0.898,2.463-0.898c2.095,0,3.799,1.704,3.799,3.799c0,0.909-0.318,1.754-0.896,2.381l-4.86,5.561 C528.587,484.964,528.386,485.055,528.174,485.055L528.174,485.055z M523.929,478.349c0.208,0.255,2.471,2.839,4.243,4.858 l4.323-4.944c0.34-0.369,0.52-0.86,0.52-1.399c0-1.285-1.045-2.331-2.33-2.331c-0.729,0-1.421,0.344-1.9,0.943 c-0.142,0.178-0.353,0.267-0.585,0.275c-0.227-0.003-0.439-0.111-0.575-0.294c-0.441-0.587-1.129-0.925-1.887-0.925 c-1.285,0-2.33,1.046-2.33,2.331c0,0.678,0.275,1.171,0.507,1.467C523.919,478.336,523.925,478.342,523.929,478.349z" />
+          </g>
+        </svg>
+        <b class="photo-list__item-text">Нравится</b>
+        <b class="photo-list__item-quantity">215</b>
+      </span>
+      </li>
       <li class="photo-list__item">
+        <img src="img/photo-car-mobile@1x.jpg" width="280" height="180" alt="Машина">
         <span class="photo-list__item-name">Левон
           <b class="photo-list__item-time">(5 часов назад)</b>
         </span>
@@ -105,6 +102,7 @@
         </span>
       </li>
       <li class="photo-list__item">
+        <img src="img/photo-drumset-mobile@1x.jpg" width="280" height="180" alt="Барабаны">
         <span class="photo-list__item-name">Антон
           <b class="photo-list__item-time">(12 часов назад)</b>
         </span>
@@ -121,6 +119,7 @@
         </span>
       </li>
       <li class="photo-list__item">
+        <img src="img/photo-window-mobile@1x.jpg" width="280" height="180" alt="Окно">
         <span class="photo-list__item-name">Борис
           <b class="photo-list__item-time">(20 часов назад)</b>
         </span>
@@ -139,6 +138,7 @@
         </span>
       </li>
       <li class="photo-list__item">
+        <img src="img/photo-fair-mobile@1x.jpg" width="280" height="180" alt="Ярмарка">
         <span class="photo-list__item-name">Сергей
           <b class="photo-list__item-time">(25 часов назад)</b>
         </span>
@@ -155,6 +155,7 @@
         </span>
       </li>
       <li class="photo-list__item">
+        <img src="img/photo-pov-mobile@1x.jpg" width="280" height="180" alt="Горы">
         <span class="photo-list__item-name">Максим
           <b class="photo-list__item-time">(40 часов назад)</b>
         </span>
@@ -171,6 +172,7 @@
         </span>
       </li>
       <li class="photo-list__item">
+        <img src="img/photo-wing-mobile@1x.jpg" width="280" height="180" alt="Крыло">
         <span class="photo-list__item-name">Надежда
           <b class="photo-list__item-time">(45 часов назад)</b>
         </span>
