--- a/source/index.html
+++ b/source/index.html
@@ -103,31 +103,25 @@
       <p class="advantages__post">Нам есть, что вам предложить!</p>
       <ul class="advantages__list">
         <li class="advantages__item">
-          <div class="advantages__item-wrapper">
-            <h3 class="advantages__title">Поднимает настроение</h3>
-            <p class="advantages__paragraph">
-              Приложение позволит вам победить осеннюю хандру и депрессию
-              буквально в несколько кликов.
-            </p>
-          </div>
+          <h3 class="advantages__title">Поднимает настроение</h3>
+          <p class="advantages__paragraph">
+            Приложение позволит вам победить осеннюю хандру и депрессию
+            буквально в несколько кликов.
+          </p>
         </li>
         <li class="advantages__item">
-          <div class="advantages__item-wrapper">
-            <h3 class="advantages__title">Меняет мир вокруг</h3>
-            <p class="advantages__paragraph">
-              Сделайте снимок и украсьте его смайликом или текстовой подписью,
-              чтобы усилить эффект.
-            </p>
-          </div>
+          <h3 class="advantages__title">Меняет мир вокруг</h3>
+          <p class="advantages__paragraph">
+            Сделайте снимок и украсьте его смайликом или текстовой подписью,
+            чтобы усилить эффект.
+          </p>
         </li>
         <li class="advantages__item">
-          <div class="advantages__item-wrapper">
-            <h3 class="advantages__title">Заводит новых друзей</h3>
-            <p class="advantages__paragraph">
-              Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и
-              заводите новых.
-            </p>
-          </div>
+          <h3 class="advantages__title">Заводит новых друзей</h3>
+          <p class="advantages__paragraph">
+            Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и
+            заводите новых.
+          </p>
         </li>
       </ul>
       <span class="advantages__research">
@@ -145,7 +139,7 @@
       <h2 class="visually-hidden">О нас</h2>
     </section>
   </main>
-  <footer class="page-footer page-footer--hidden">
+  <footer class="page-footer page-footer--index">
     <div class="page-footer__logo">
       <a href="#">
         <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="146.3px" height="40.375px" viewBox="0 0 146.3 40.375" enable-background="new 0 0 146.3 40.375" xml:space="preserve">
