--- a/source/photo.html
+++ b/source/photo.html
@@ -52,10 +52,7 @@
     </div>
   </header>
   <main class="page-main">
-    <p class="page-main__title">
-      Фотографии пользователей
-    </p>
-    <h1 class="visually-hidden">Мобильное проложение "Пинк" фотографии</h1>
+    <h1 class="page-main__title">Фотографии пользователей</h1>
       <p class="page-main__post-paragraph">
         Взгляните на фотографии, которые
         выкладывают пользователи!
@@ -63,7 +60,7 @@
       </p>
     <ul class="photo-list page-main__photo-list">
       <li class="photo-list__item photo-list__item--panorama page-main__photo-list">
-        <img src="img/panorama-mobile@1x.jpg" width="320"  height="137" alt="Панорама">
+        <img class="photo-list__image" src="img/panorama-mobile@1x.jpg" width="320"  height="137" alt="Панорама">
       <span class="photo-list__item-name">Анна
         <b class="photo-list__item-time">(5 минут назад)</b>
       </span>
