--- a/source/form.html
+++ b/source/form.html
@@ -52,10 +52,7 @@
     </div>
   </header>
   <main class="page-main">
-    <h1 class="visually-hidden">Мобильное проложение "Пинк" конкурс</h1>
-    <p class="page-main__title">
-      Конкурс на самое безбашенное путешествие с Пинк
-    </p>
+    <h1 class="page-main__title">Конкурс на самое безбашенное путешествие с Пинк</h1>
   </main>
   <footer class="page-footer">
     <div class="page-footer__logo">
