--- a/source/index.html
+++ b/source/index.html
@@ -75,7 +75,7 @@
         <p class="application-market__title">
           Взгляните на жизнь иначе!
         </p>
-        <span class="application-market__box">
+        <div class="application-market__box">
           <a class="application-market__button" href="#">Скачать приложение</a>
           <ul class="application-market__list">
             <li class="application-market__item">
@@ -95,16 +95,16 @@
             </li>
           </ul>
           <p class="application-market__text">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
-        </span>
+        </div>
       </div>
     </section>
     <section class="advantages page-main__advantages">
       <h2 class="visually-hidden">Наши преимущества</h2>
 
-      <span class="advantages__post">
+      <div class="advantages__post">
         <p class="advantages__post-item">Устали от серости мегаполиса?</p>
         <p class="advantages__post-item">Нам есть, что вам предложить!</p>
-      </span>
+      </div>
       <div class="advantages__list-wrapper">
         <ul class="advantages__list">
           <li class="advantages__item">
@@ -131,13 +131,13 @@
         </ul>
       </div>
       <div class="advantages__research-wrapper">
-        <span class="advantages__research">
+        <div class="advantages__research">
           <svg class="advantages__research-image" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="298px" height="345.097px" viewBox="0 0 298 345.097" enable-background="new 0 0 298 345.097" xml:space="preserve">
             <path fill="#DEDEDE"
               d="M264.568,102.055l5.355-5.355c7.717-7.717,9.124-18.938,3.126-24.935c-5.997-5.997-17.217-4.59-24.934,3.127l-5.386,5.385 C221.768,63.292,196.11,51.875,168,48.297v-9.583h7.658c10.914,0,19.843-8.711,19.843-19.357S186.573,0,175.659,0h-53.317  c-10.913,0-19.842,8.711-19.842,19.357s8.929,19.357,19.842,19.357H130v9.583C56.681,57.629,0,120.244,0,196.097  c0,82.291,66.709,149,149,149c82.29,0,149-66.709,149-149C298,160.434,285.465,127.703,264.568,102.055z M149,306.264 c-60.844,0-110.167-49.323-110.167-110.167S88.156,85.93,149,85.93c60.843,0,110.167,49.323,110.167,110.167  S209.843,306.264,149,306.264z" />
           </svg>
-          <span class="advantages__research-text">
-            <h3 class="advantages__research-title">Эффект на 24часа!</h3>
+          <div class="advantages__research-text">
+            <p class="advantages__research-title">Эффект на 24часа!</p>
             <p class="advantages__research-post">
               Британские ученые провели исследования
               и доказали, что положительный эффект
@@ -145,14 +145,13 @@
               целые сутки!
             </p>
             <a class="advantages__research-link" href="#">Узнать больше об исследовании</a>
-          </span>
-        </span>
+          </div>
+        </div>
       </div>
     </section>
     <section class="reviews page-main__reviews">
       <h2 class="visually-hidden">О нас</h2>
     </section>
-    </div>
   </main>
   <footer class="page-footer">
     <div class="page-footer__inner page-footer__inner--index">
