--- a/source/form.html
+++ b/source/form.html
@@ -6,7 +6,7 @@
   <title>HTML Academy: Пинк</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="format-detection" content="telephone=no">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body class="page-body">
@@ -102,7 +102,7 @@
     </div>
   </header>
   <main class="page-main">
-    <div class="page-main__inner">
+    <div class="page-main__inner page-main__inner--form">
       <h1 class="page-main__title">Конкурс на самое безбашенное путешествие с Пинк</h1>
     </div>
   </main>
