--- a/source/index.html
+++ b/source/index.html
@@ -339,6 +339,7 @@
     </div>
   </footer>
   <script src="js/script.js"></script>
+  <script src="js/picturefill.js" async></script>
 </body>
 
 </html>
