--- a/source/form.html
+++ b/source/form.html
@@ -189,6 +189,7 @@
     </div>
   </footer>
   <script src="js/script.js"></script>
+  <script src="js/picturefill.js" async></script>
 </body>
 
 </html>
