--- a/source/photo.html
+++ b/source/photo.html
@@ -393,6 +393,7 @@
     </div>
   </footer>
   <script src="js/script.js"></script>
+  <script src="js/picturefill.js" async></script>
 </body>
 
 </html>
