--- a/source/index.html
+++ b/source/index.html
@@ -186,8 +186,40 @@
         <input class="reviews__button-radio" type="radio" id="review3" name="contact">
       </div>
     </section>
-    <section class="">
-
+    <section class="tariffs page-main__tariffs">
+      <h2 class="visually-hidden">Тарифы</h2>
+      <table>
+        <th>
+          <td>Стандарт <b>3,99 USD</b></td>
+        </th>
+        <tr>
+          <td>Розовый фильтр</td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>Смайлики</td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>Комментарии</td>
+          <td></td>
+          <td></td>
+        </tr>
+      </table>
+      <div class="tariffs__buttons">
+        <input class="tariffs__buttons-radio" type="radio" id="tariff1" name="contact">
+        <input class="tariffs__buttons-radio" type="radio" id="tariff2" name="contact" checked>
+        <input class="tariffs__buttons-radio" type="radio" id="tariff3" name="contact">
+      </div>
+    </section>
+    <section class="contacts page-main__contacts">
+      <h2 class="visually-hidden">Наши координаты</h2>
+      <div class="contacts__post">
+        <p class="contacts__post-item">Остались вопросы?</p>
+        <p class="contacts__post-item">Свяжитесь с нами!</p>
+      </div>
     </section>-->
   </main>
   <footer class="page-footer">
